[package]
name = "gt06"
version = "0.3.0"
edition = "2024"
description = "Parser and stream decoder for the GT06 GPS tracker protocol"
license = "MIT"
repository = "https://github.com/SerAbin1/gt06"
homepage = "https://github.com/SerAbin1/gt06"
readme = "README.md"
keywords = ["gps", "gt06", "tracker", "protocol", "parser"]
categories = ["parser-implementations", "embedded", "network-programming"]

[dependencies]
